add repository link to page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen font-sans">
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-3xl md:text-4xl font-bold text-center text-blue-800 mb-1">Forecast <i>thy</i> Weather</h1>
-        <h2 class="text-lg md:text-xl font-italic text-center text-blue-800 mb-8">Made with <a class="underline hover:text-black-900" href="https://openweathermap.org">OpenWeatherMap</a></h2>
+        <h2 class="text-lg md:text-xl font-italic text-center text-blue-800 mb-1">Made with <a class="underline" href="https://openweathermap.org">OpenWeatherMap</a></h2>
+        <h2 class="text-lg md:text-xl font-italic text-center text-blue-800 mb-8"><a class="underline" href="https://github.com/ananthakrishn04/WeatherApp_js">GitHub Repository</a></h2>
         
         <!-- Search Section -->
         <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
